# Tutorial-Django

./: .gitignore  db.sqlite3  package-lock.json  pyproject.toml  testafter.txt  verificar.text
config/: settings.py  urls.py
livraria/: admin.py  models.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_alter_categoria_options_alter_livro_options.py
livraria/models/: __init__.py  autores.py  categorias.py  editoras.py  livros.py
livraria/serializers/: __init__.py  editoras.py  livros.py
livraria/views/: __init__.py  autores.py  categorias.py  editoras.py  livros.py
